--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
-	<script src="http://webapi.amap.com/maps?v=1.3&key=8325164e247e15eea68b59e89200988b"></script>
+	<script src="js/map.js"></script>
 	<script type="text/javascript">
   !function(){
     var infoWindow, map, level = 14,
@@ -244,7 +244,7 @@
       }); 
     })
     
-    
+
   }();
   </script>
 	</script>
